--- a/Electro/src/style.css
+++ b/Electro/src/style.css
@@ -1,1 +1,10 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+nav {
+  border-bottom: 1px solid #eaebec;
+}
+
+nav .navleft {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+/*# sourceMappingURL=style.css.map */
