--- a/Electro/src/style.css
+++ b/Electro/src/style.css
@@ -47,4 +47,43 @@ nav .navright a {
 nav .register span {
   color: black;
 }
+
+#header {
+  margin-top: 20px;
+}
+
+#header .headerleft a {
+  text-decoration: none;
+  color: #333e48;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#header .headerleft h2 {
+  font-size: 2.5rem;
+  font-weight: 790;
+}
+
+#header .headerleft span {
+  color: #fed700;
+  font-weight: 790;
+  font-size: 2.2rem;
+}
+
+#header .headermiddle input {
+  width: 90%;
+  border: 1px solid #fed700;
+  border-radius: 25px;
+  padding: 10px;
+  outline: none;
+}
+
+#header .headermiddle svg {
+  border: 1px solid #fed700;
+  width: 30px;
+  height: 30px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
 /*# sourceMappingURL=style.css.map */
