--- a/Electro/src/scss/layout/_navbar.scss
+++ b/Electro/src/scss/layout/_navbar.scss
@@ -66,20 +66,85 @@ nav{
     }
 
     .headermiddle{
-        
+            
         input{
-         width: 90%;
+            
+         width: 40%;
          border: 1px solid #fed700;
          border-radius: 25px;   
          padding: 10px;
          outline: none;
+         position: absolute;
         }
-        svg{
-            border: 1px solid #fed700;
-            width: 30px;
-            height: 30px;
-            border-top-right-radius: 10px;
-            border-bottom-right-radius: 10px;
+        button{
+            border: none;
+            position: relative;
+            float: right;
+            margin-right: 15px;
+            width: 56px;
+            cursor: pointer;
+            background-color: #fed700;
+            border-top-right-radius: 25px;
+            border-bottom-right-radius: 25px;
+        
+            svg{
+                padding: 10px;
+                color: #333e48;
+            }
         }
+        
+    }
+
+    .headerright{
+        display: flex;
+        float: right;
+        p{
+            padding-left: 5px;
+            font-weight: 750;
+            font-size: 1rem;
+        }
+        .compare{
+            padding-left: 30px;
+            position: relative;
+            span{
+                position: absolute;
+                background-color: #fed700;
+                padding-right: 4px;
+                padding-left: 4px;
+                font-weight: 620;
+                border-radius: 80%;
+                bottom: 0;
+                right: 0;
+            }
+        }
+        .heart{
+            padding-left: 50px;
+            position: relative;
+            span{
+                position: absolute;
+                background-color: #fed700;
+                padding-right: 4px;
+                padding-left: 4px;
+                border-radius: 50%;
+                bottom: 0;
+                right: 0;
+                font-weight: 620;
+            }
+        }
+        .shop{
+            padding-left: 50px;
+            position: relative;
+            span{
+                position: absolute;
+                background-color: #fed700;
+                padding-right: 4px;
+                padding-left: 4px;
+                border-radius: 50%;
+                bottom: 0;
+                right: 0;
+                font-weight: 620;
+            }
+        }
+       
     }
 }
