--- a/Electro/src/style.css
+++ b/Electro/src/style.css
@@ -1,3 +1,8 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 nav {
   border-bottom: 1px solid #eaebec;
 }
@@ -72,18 +77,89 @@ nav .register span {
 }
 
 #header .headermiddle input {
-  width: 90%;
+  width: 40%;
   border: 1px solid #fed700;
   border-radius: 25px;
   padding: 10px;
   outline: none;
+  position: absolute;
 }
 
-#header .headermiddle svg {
-  border: 1px solid #fed700;
-  width: 30px;
-  height: 30px;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+#header .headermiddle button {
+  border: none;
+  position: relative;
+  float: right;
+  margin-right: 15px;
+  width: 56px;
+  cursor: pointer;
+  background-color: #fed700;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+}
+
+#header .headermiddle button svg {
+  padding: 10px;
+  color: #333e48;
+}
+
+#header .headerright {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  float: right;
+}
+
+#header .headerright p {
+  padding-left: 5px;
+  font-weight: 750;
+  font-size: 1rem;
+}
+
+#header .headerright .compare {
+  padding-left: 30px;
+  position: relative;
+}
+
+#header .headerright .compare span {
+  position: absolute;
+  background-color: #fed700;
+  padding-right: 4px;
+  padding-left: 4px;
+  font-weight: 620;
+  border-radius: 80%;
+  bottom: 0;
+  right: 0;
+}
+
+#header .headerright .heart {
+  padding-left: 50px;
+  position: relative;
+}
+
+#header .headerright .heart span {
+  position: absolute;
+  background-color: #fed700;
+  padding-right: 4px;
+  padding-left: 4px;
+  border-radius: 50%;
+  bottom: 0;
+  right: 0;
+  font-weight: 620;
+}
+
+#header .headerright .shop {
+  padding-left: 50px;
+  position: relative;
+}
+
+#header .headerright .shop span {
+  position: absolute;
+  background-color: #fed700;
+  padding-right: 4px;
+  padding-left: 4px;
+  border-radius: 50%;
+  bottom: 0;
+  right: 0;
+  font-weight: 620;
 }
 /*# sourceMappingURL=style.css.map */
