--- a/Electro/src/scss/layout/_navbar.scss
+++ b/Electro/src/scss/layout/_navbar.scss
@@ -1,9 +1,8 @@
 nav{
-    border-bottom: 1px solid #eaebec;
+   
    .navleft{
     display: flex; 
-   
-    margin-top: 10px;
+    height: 20px;
     p{
       
         padding-left: 5px;
@@ -25,7 +24,7 @@ nav{
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    margin-top: 10px;
+  
 
     
     a{
@@ -41,110 +40,111 @@ nav{
         color: black;
     }
    }
-   
-}
+   margin-top: 20px;
 
-#header{
-    margin-top: 20px;
-
-    .headerleft{
-        
-        a{
-            text-decoration: none;
-            color: #333e48;
-            display: flex;
-        }
-        h2{
-            font-size: 2.5rem;
-            font-weight: 790;
-        }
-        span{
-            color: #fed700;
-            font-weight: 790;
-            font-size: 2.2rem;
-        }
-    }
-
-    .headermiddle{
-            
-        input{
-            
-         width: 40%;
-         border: 1px solid #fed700;
-         border-radius: 25px;   
-         padding: 10px;
-         outline: none;
-         position: absolute;
-        }
-        button{
-            border: none;
-            position: relative;
-            float: right;
-            margin-right: 15px;
-            width: 56px;
-            cursor: pointer;
-            background-color: #fed700;
-            border-top-right-radius: 25px;
-            border-bottom-right-radius: 25px;
-        
-            svg{
-                padding: 10px;
-                color: #333e48;
-            }
-        }
-        
-    }
-
-    .headerright{
-        display: flex;
-        float: right;
-        p{
-            padding-left: 5px;
-            font-weight: 750;
-            font-size: 1rem;
-        }
-        .compare{
-            padding-left: 30px;
-            position: relative;
-            span{
-                position: absolute;
-                background-color: #fed700;
-                padding-right: 4px;
-                padding-left: 4px;
-                font-weight: 620;
-                border-radius: 80%;
-                bottom: 0;
-                right: 0;
-            }
-        }
-        .heart{
-            padding-left: 50px;
-            position: relative;
-            span{
-                position: absolute;
-                background-color: #fed700;
-                padding-right: 4px;
-                padding-left: 4px;
-                border-radius: 50%;
-                bottom: 0;
-                right: 0;
-                font-weight: 620;
-            }
-        }
-        .shop{
-            padding-left: 50px;
-            position: relative;
-            span{
-                position: absolute;
-                background-color: #fed700;
-                padding-right: 4px;
-                padding-left: 4px;
-                border-radius: 50%;
-                bottom: 0;
-                right: 0;
-                font-weight: 620;
-            }
-        }
+   .headerleft{
        
-    }
+       a{
+           text-decoration: none;
+           color: #333e48;
+           display: flex;
+       }
+       h2{
+           font-size: 2.5rem;
+           font-weight: 790;
+       }
+       span{
+           color: #fed700;
+           font-weight: 790;
+           font-size: 2.2rem;
+       }
+   }
+
+   .headermiddle{
+           
+       input{
+           
+        width: 40%;
+        border: 1px solid #fed700;
+        border-radius: 25px;   
+        padding: 10px;
+        outline: none;
+        position: absolute;
+       }
+       button{
+           border: none;
+           position: relative;
+           float: right;
+           margin-right: 15px;
+           width: 56px;
+           cursor: pointer;
+           background-color: #fed700;
+           border-top-right-radius: 25px;
+           border-bottom-right-radius: 25px;
+       
+           svg{
+               padding: 10px;
+               color: #333e48;
+           }
+       }
+       
+   }
+
+   .headerright{
+       display: flex;
+       float: right;
+       p{
+           padding-left: 5px;
+           font-weight: 750;
+           font-size: 1rem;
+       }
+       .compare{
+           padding-left: 30px;
+           position: relative;
+           span{
+               position: absolute;
+               background-color: #fed700;
+               padding-right: 4px;
+               padding-left: 4px;
+               color: #333e48;
+               font-weight: 620;
+               border-radius: 80%;
+               bottom: 0;
+               right: 0;
+           }
+       }
+       .heart{
+           padding-left: 50px;
+           position: relative;
+           span{
+               position: absolute;
+               color: #333e48;
+               background-color: #fed700;
+               padding-right: 4px;
+               padding-left: 4px;
+               border-radius: 50%;
+               bottom: 0;
+               right: 0;
+               font-weight: 620;
+           }
+       }
+       .shop{
+           padding-left: 50px;
+           position: relative;
+           span{
+               position: absolute;
+               background-color: #fed700;
+               padding-right: 4px;
+               color: #333e48;
+               padding-left: 4px;
+               border-radius: 50%;
+               bottom: 0;
+               right: 0;
+               font-weight: 620;
+           }
+       }
+      
+   }
 }
+
+
