--- a/Electro/src/style.css
+++ b/Electro/src/style.css
@@ -3,10 +3,6 @@
           box-sizing: border-box;
 }
 
-#header-bottom .dropdown {
-  margin-top: 150px;
-}
-
 #header-bottom .dropdown button {
   width: 250px;
   padding: 10px;
@@ -24,6 +20,23 @@
 
 #header-bottom .dropdown-menu .li_bold {
   font-weight: 650;
+  margin-left: 8px;
+  width: 90%;
+}
+
+#header-bottom .dropdown-menu .li_bold span {
+  font-size: .6rem;
+  color: white;
+  padding: 2px;
+  width: 40px;
+  float: right;
+  margin-right: 45px;
+  background-color: #4cd964;
+}
+
+#header-bottom .dropdown-menu .li_thin {
+  margin-left: 8px;
+  width: 90%;
 }
 
 #header-bottom .dropdown-menu a {
@@ -33,7 +46,94 @@
 }
 
 #header-bottom .dropdown-menu li {
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #dddddd;
+}
+
+.dropdown-hover {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-hover button {
+  background: none;
+  border: none;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  display: block;
+  text-decoration: none;
+  color: black;
+}
+
+.dropdown-hover:hover .dropdown-content {
+  display: block;
+}
+
+#swiper .swiper {
+  width: 100%;
+  height: 100%;
+}
+
+#swiper .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#swiper .swiper-slide img {
+  position: absolute;
+}
+
+#swiper .swiper-slide .words h2 {
+  position: relative;
+}
+
+#swiper .swiper-slide .words h5 {
+  position: relative;
+}
+
+#swiper .swiper-slide .words span {
+  position: relative;
+}
+
+#swiper .swiper-slide .words p {
+  position: relative;
+}
+
+#swiper .swiper-slide .words button {
+  position: relative;
+}
+
+#swiper .swiper-slide .img1 img {
+  position: relative;
+}
+
+#swiper .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#swiper .swiper {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 nav {
