--- a/Electro/src/scss/pages/home/_main.scss
+++ b/Electro/src/scss/pages/home/_main.scss
@@ -228,9 +228,86 @@
     img{
         margin-top: 30px;
         gap: 20px;
-        width: 90%;
-        height: 90%;
+        display: block;
+        width: 100%;
+        height: auto;
         object-fit: cover;
-       
+     
+    }
+    .overlay{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: rgba(255, 255, 255, 0.212) ;
+        overflow: hidden;
+        width: 100%;
+        height: 0;
+        transition: .3s ease-in-out;
+    }
+
+
+    .image1-1{
+        position: relative;
+        width: 100%;
+    }
+    .image1-1 :hover .overlay {
+        height: 100%;
+      }
+  }
+
+  #featured{
+    padding-top: 50px;
+    .col-4{
+        border: 2px solid #fed700;
+        border-radius: 25px;
+        img{
+            width: 100%;
+            height: auto;
+            object-fit: cover;
+        }
+        .special{
+            h5{
+                max-width: 150px;
+                margin-top: 20px;
+                margin-left: 10px;
+            }
+          
+        }
+        .percent{
+            p{
+                border-radius: 50%;
+                background-color: #fed700;
+                float: right;
+                padding: 10px;
+                margin-top: -50px;
+                span{
+                    font-weight: 660;
+                    font-size: 1.4rem;
+                }
+            }
+           }
+
+           .bottom-special{
+            p{
+                color: #0062bd;
+                font-weight: 620;
+                text-align: center;
+            }
+            h5{
+                color: #dc3545;
+                span{
+                    color: #848484;
+                    text-decoration: line-through;
+                }
+            }
+           }
+    }
+    .col-8{
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
   }
