--- a/Electro/src/scss/pages/home/_main.scss
+++ b/Electro/src/scss/pages/home/_main.scss
@@ -1,5 +1,6 @@
 #header-bottom{
- 
+
+   
     .dropdown{
        
 
@@ -261,6 +262,7 @@
     .col-4{
         border: 2px solid #fed700;
         border-radius: 25px;
+        height: auto;
         img{
             width: 100%;
             height: auto;
@@ -296,11 +298,19 @@
             }
             h5{
                 color: #dc3545;
+                text-align: center;
                 span{
                     color: #848484;
                     text-decoration: line-through;
                 }
             }
+           }
+           .progress{
+            span{
+                width: 13%;
+                background-color: #fed700;
+            }
+            
            }
     }
     .col-8{
