--- a/Electro/src/scss/layout/_navbar.scss
+++ b/Electro/src/scss/layout/_navbar.scss
@@ -1,5 +1,4 @@
-nav{
-   
+nav{   
    .navleft{
     display: flex; 
     height: 20px;
@@ -146,5 +145,27 @@ nav{
       
    }
 }
+
+.active-nav{
+    position: fixed !important;
+   
+    left: 0;
+    right: 0;
+    animation-name: fadeInUp;
+    animation-duration: 1s;
+    z-index: 9999;
+}
+
+@keyframes fadeInUp{
+    from{
+        opacity: 1;
+     
+    }
+    to{
+        opacity: 1;
+        top: 50px;
+    }
+}
+
 
 
