--- a/Electro/src/scss/layout/_navbar.scss
+++ b/Electro/src/scss/layout/_navbar.scss
@@ -1,38 +1,43 @@
-nav{   
-   .navleft{
-    display: flex; 
-    height: 20px;
-    p{
-      
+header{
+    margin-top: 20px;
+    .navleft{
+        display: flex; 
+        height: 20px;
+        p{
+          
+            padding-left: 5px;
+            font-size: .9rem;
+        }
+        svg{
+            color: #fed700;
+            margin-top: 5px;
+        }
+       }
+       span{
+        color:  #eaebec;
         padding-left: 5px;
-        font-size: .9rem;
-    }
-    svg{
-        color: #fed700;
-        margin-top: 5px;
-    }
-   }
-   span{
-    color:  #eaebec;
-    padding-left: 5px;
-    padding-right: 5px;
-   }
-
-
-   .navright{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  
-
+        padding-right: 5px;
+       }
     
-    a{
-        text-decoration: none;
-        color: black;
-        padding-left: 5px;
-    }
- 
-   }
+    
+       .navright{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+      
+    
+        
+        a{
+            text-decoration: none;
+            color: black;
+            padding-left: 5px;
+        }
+     
+       }
+}
+
+nav{   
+
 
    .register{
     span{
@@ -148,7 +153,7 @@ nav{
 
 .active-nav{
     position: fixed !important;
-   
+    background-color: #ffff;
     left: 0;
     right: 0;
     animation-name: fadeInUp;
@@ -159,11 +164,11 @@ nav{
 @keyframes fadeInUp{
     from{
         opacity: 1;
-     
+        top: 0;
     }
     to{
-        opacity: 1;
-        top: 50px;
+        opacity: 0;
+        top: 0;
     }
 }
 
