--- a/Electro/src/scss/pages/home/_home.scss
+++ b/Electro/src/scss/pages/home/_home.scss
@@ -93,7 +93,23 @@
         width: 100%;
         height: 100%;
       }
-  
+      .swiper-pagination-bullet{
+        background-color: #fed700;
+        width: 30px;
+        border-radius: 10px;
+      }
+      .swiper-button-prev{
+        color: #fff;
+        padding: 30px;
+        border-radius: 50%;
+        background-color: #333e48;
+      }
+      .swiper-button-next{
+        color: #fff;
+        padding: 30px;
+        border-radius: 50%;
+        background-color: #333e48;
+      }
       .swiper-slide {
         text-align: center;
         font-size: 18px;
@@ -348,9 +364,15 @@
                     color: #0062bd;
                     font-weight: 650;
                 }
+                
             }
             .image2-1 :hover .overlay {
                 height: 100%;
+                .prices{
+                    svg{
+                        color: #fed700;
+                    }
+                }
               }
 
               .col-6{
@@ -375,6 +397,7 @@
                     border-radius: 50%;
                 }
               }
+             
      
         }
 
@@ -395,3 +418,195 @@
         }
     }
   }
+
+
+#best_deals{
+    background-color: #f9f9f9;
+    .headings{
+        display: flex;
+        justify-content: center;
+        padding-top: 40px;
+        a{
+            padding-left: 30px;
+            color: #333e48;
+            text-decoration: none;
+            font-weight: 550;
+        }
+    }
+    hr{
+        width: 90%;
+       margin-left: 100px;
+    }
+
+    .col-3{
+        width: 330px;
+        .col-6{
+            background-color: #ffff;
+        }
+        padding: 15px;
+        img{
+            border-right: 1px solid #dddddd;
+            display: block;
+            width: 100%;
+            height: auto;
+            object-fit: cover;
+        }
+        .overlay{
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background-color: rgba(255, 255, 255, 0.212) ;
+            overflow: hidden;
+            width: 100%;
+            height: 0;
+            transition: .3s ease-in-out;
+            svg{
+                
+                color: #848484;
+            }
+            color: #848484;
+        }
+        .image2-1{
+            position: relative;
+            width: 100%;
+            a{
+                text-decoration: none;
+            }
+            span{
+                color: #8fa7c1;
+                font-size: 0.9rem;
+            }
+            p{
+                color: #0062bd;
+                font-weight: 650;
+            }
+            
+        }
+        .image2-1 :hover .overlay {
+            height: 100%;
+            .prices{
+                svg{
+                    color: #fed700;
+                }
+            }
+          }
+
+
+          .prices{
+            display: flex;
+            gap: 10px;
+            h4{
+                font-size: 1.2rem;
+                color: #dc3545;
+            }
+            h5{
+                font-size: 1rem;
+            }
+            svg{
+                background-color: #e6e6e6;
+                color: white;
+                border-radius: 50%;
+            }
+          }
+         
+ 
+    }
+
+
+    .col-6{
+        .swiper {
+            width: 100%;
+            height: 100%;
+          }
+
+       
+      
+          .swiper-slide {
+            text-align: center;
+            font-size: 18px;
+            background: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+      
+          .swiper-slide img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+      
+          body {
+            background: #000;
+            color: #000;
+          }
+      
+          .swiper {
+            width: 100%;
+            height: 300px;
+            margin-left: auto;
+            margin-right: auto;
+          }
+      
+          .swiper-slide {
+            background-size: cover;
+            background-position: center;
+            height: 200px;
+          }
+          
+          .swiper-slide-active{
+            height: 500px;
+            img{
+                margin-top: -150px;
+            }
+          }
+          .swiper-slide-visible{
+            height: 150px;
+            width: 150px;
+            img{
+                margin-top: 50px;
+                width: 100px;
+                height: 100px;
+                
+            }
+          }
+      
+          .mySwiperr{
+            height: 100%;
+            width: 100%;
+          }
+
+          .swiper-wrapper img{
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+      
+          .mySwiperr {
+            height: 100%;
+            box-sizing: border-box;
+            padding: 10px 0;
+          }
+      
+          .mySwiper .swiper-slide {
+            width: 25%;
+            height: 100%;
+            opacity: 0.4;
+          }
+      
+          .mySwiper .swiper-slide-thumb-active {
+            opacity: 1;
+          }
+      
+          .swiper-slide img {
+            display: block;
+            width: 60%;
+            height: 60%;
+            object-fit: cover;
+            padding: 20px;
+          }
+    }
+}
