--- a/Electro/src/style.css
+++ b/Electro/src/style.css
@@ -284,6 +284,26 @@ nav .headerright .shop span {
   height: 100%;
 }
 
+#swiper .swiper-pagination-bullet {
+  background-color: #fed700;
+  width: 30px;
+  border-radius: 10px;
+}
+
+#swiper .swiper-button-prev {
+  color: #fff;
+  padding: 30px;
+  border-radius: 50%;
+  background-color: #333e48;
+}
+
+#swiper .swiper-button-next {
+  color: #fff;
+  padding: 30px;
+  border-radius: 50%;
+  background-color: #333e48;
+}
+
 #swiper .swiper-slide {
   text-align: center;
   font-size: 18px;
@@ -554,6 +574,10 @@ nav .headerright .shop span {
   height: 100%;
 }
 
+#featured .col-8 .col-3 .image2-1 :hover .overlay .prices svg {
+  color: #fed700;
+}
+
 #featured .col-8 .col-3 .col-6 {
   -webkit-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
@@ -600,5 +624,394 @@ nav .headerright .shop span {
 #featured .col-8 .sections a {
   text-decoration: none;
   color: #333e48;
+}
+
+#best_deals {
+  background-color: #f9f9f9;
+}
+
+#best_deals .headings {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 40px;
+}
+
+#best_deals .headings a {
+  padding-left: 30px;
+  color: #333e48;
+  text-decoration: none;
+  font-weight: 550;
+}
+
+#best_deals hr {
+  width: 90%;
+  margin-left: 100px;
+}
+
+#best_deals .col-3 {
+  width: 330px;
+  padding: 15px;
+}
+
+#best_deals .col-3 .col-6 {
+  background-color: #ffff;
+}
+
+#best_deals .col-3 img {
+  border-right: 1px solid #dddddd;
+  display: block;
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#best_deals .col-3 .overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(255, 255, 255, 0.212);
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+  color: #848484;
+}
+
+#best_deals .col-3 .overlay svg {
+  color: #848484;
+}
+
+#best_deals .col-3 .image2-1 {
+  position: relative;
+  width: 100%;
+}
+
+#best_deals .col-3 .image2-1 a {
+  text-decoration: none;
+}
+
+#best_deals .col-3 .image2-1 span {
+  color: #8fa7c1;
+  font-size: 0.9rem;
+}
+
+#best_deals .col-3 .image2-1 p {
+  color: #0062bd;
+  font-weight: 650;
+}
+
+#best_deals .col-3 .image2-1 :hover .overlay {
+  height: 100%;
+}
+
+#best_deals .col-3 .image2-1 :hover .overlay .prices svg {
+  color: #fed700;
+}
+
+#best_deals .col-3 .prices {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+}
+
+#best_deals .col-3 .prices h4 {
+  font-size: 1.2rem;
+  color: #dc3545;
+}
+
+#best_deals .col-3 .prices h5 {
+  font-size: 1rem;
+}
+
+#best_deals .col-3 .prices svg {
+  background-color: #e6e6e6;
+  color: white;
+  border-radius: 50%;
+}
+
+#best_deals .col-6 .swiper {
+  width: 100%;
+  height: 100%;
+}
+
+#best_deals .col-6 .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#best_deals .col-6 .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#best_deals .col-6 body {
+  background: #000;
+  color: #000;
+}
+
+#best_deals .col-6 .swiper {
+  width: 100%;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#best_deals .col-6 .swiper-slide {
+  background-size: cover;
+  background-position: center;
+  height: 200px;
+}
+
+#best_deals .col-6 .swiper-slide-active {
+  height: 500px;
+}
+
+#best_deals .col-6 .swiper-slide-active img {
+  margin-top: -150px;
+}
+
+#best_deals .col-6 .swiper-slide-visible {
+  height: 150px;
+  width: 150px;
+}
+
+#best_deals .col-6 .swiper-slide-visible img {
+  margin-top: 50px;
+  width: 100px;
+  height: 100px;
+}
+
+#best_deals .col-6 .mySwiperr {
+  height: 100%;
+  width: 100%;
+}
+
+#best_deals .col-6 .swiper-wrapper img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#best_deals .col-6 .mySwiperr {
+  height: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px 0;
+}
+
+#best_deals .col-6 .mySwiper .swiper-slide {
+  width: 25%;
+  height: 100%;
+  opacity: 0.4;
+}
+
+#best_deals .col-6 .mySwiper .swiper-slide-thumb-active {
+  opacity: 1;
+}
+
+#best_deals .col-6 .swiper-slide img {
+  display: block;
+  width: 60%;
+  height: 60%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  padding: 20px;
+}
+
+#details .swiper {
+  margin-top: 20px;
+  width: 100%;
+  height: 100%;
+}
+
+#details .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#details .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#details body {
+  background: #000;
+  color: #000;
+}
+
+#details .swiper {
+  width: 100%;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#details .swiper-slide {
+  background-size: cover;
+  background-position: center;
+}
+
+#details .swiper-slide img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#details .mySwiper2 {
+  height: 80%;
+  width: 100%;
+}
+
+#details .mySwiper {
+  height: 20%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px 0;
+}
+
+#details .mySwiper .swiper-slide {
+  width: 25%;
+  height: 100%;
+  opacity: 0.4;
+}
+
+#details .swiper-button-next {
+  color: #333e48;
+  font-size: .8rem;
+}
+
+#details .swiper-button-prev {
+  color: #333e48;
+  font-size: .8rem;
+}
+
+#details .mySwiper .swiper-slide-thumb-active {
+  opacity: 1;
+}
+
+#details .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#details .col-4 {
+  margin-top: 20px;
+  margin-left: 20px;
+}
+
+#details .col-4 .stars svg {
+  color: #fed700;
+}
+
+#details .col-4 .social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+}
+
+#details .col-4 .social .facebook {
+  background-color: #3b5998;
+  color: #fff;
+  padding: 2px;
+  width: 80px;
+}
+
+#details .col-4 .social .facebook svg {
+  padding-left: 2px;
+  color: #fff;
+}
+
+#details .col-4 .social .facebook span {
+  margin-left: 10px;
+}
+
+#details .col-4 .social .twitter {
+  background-color: #1da1f2;
+  color: #fff;
+  padding: 2px;
+  width: 80px;
+}
+
+#details .col-4 .social .twitter svg {
+  padding-left: 2px;
+  color: #fff;
+}
+
+#details .col-4 .social .twitter span {
+  margin-left: 10px;
+}
+
+#details .col-4 p {
+  padding-top: 10px;
+  color: #8f8b87;
+}
+
+#details .col-4 .list li {
+  color: #8f8b87;
+}
+
+#details .col-4 .bluep span {
+  color: #1da1f3;
+  font-size: 1.1rem;
+  font-weight: 550;
+}
+
+.gohome {
+  margin-top: 20px;
+  margin-left: 50px;
+}
+
+.gohome a {
+  text-decoration: none;
+  color: #292828;
+}
+
+.gohome {
+  margin-top: 20px;
+  margin-left: 50px;
+}
+
+.gohome a {
+  text-decoration: none;
+  color: #292828;
 }
 /*# sourceMappingURL=style.css.map */
