--- a/Electro/src/scss/pages/register/_register.scss
+++ b/Electro/src/scss/pages/register/_register.scss
@@ -6,3 +6,66 @@
         color: rgb(41, 40, 40);
     }
 }
+
+
+#register{
+    margin-top: 30px;
+    hr{
+        width: 90%;
+    }
+    h2{
+        font-weight: 420;
+    }
+        h5{
+            margin-top: 20px;
+            font-weight: 400;
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+        li{
+            list-style: none;
+            margin-left: -20px;
+            svg{
+                color: #5bb300;
+            }
+        }
+    .inputs{
+        span{
+            font-weight: 500;
+        }
+        input{
+            border: 1px solid  #333e485e ;
+            border-radius: 30px;
+            width: 90%;
+            padding: 10px;
+            margin-top: 10px;
+        }
+    }
+   
+
+    .row{
+        margin-top: 20px;
+        a{
+            text-decoration: none;
+            color: rgb(53, 53, 53);
+        }
+        .password{
+            a{
+                float: right;
+            }
+        }
+       
+    }
+
+    .loginbtn{
+        margin-top: 20px;
+        button{
+            background-color: #fed700;
+            border: none;
+            padding: 10px;
+            width: 130px;
+            font-weight: 550;
+            border-radius: 25px;
+        }
+    }
+}
